# ddc-html-tool

./: .gitignore  .instructions.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  example.html  html-cleaner.py  html-cleaner.spec  main.py  pyproject.toml  release.py  setup.py  test-input.txt
.claude/agents/: Uncle Bob.agent.md
.github/: copilot-instructions.md
.github/workflows/: publish.yml  tests.yml
docs/: QUICKSTART.md  README.md
modules/: __init__.py  garbage_cleaner.py  href_analyzer.py  space_cleaner.py
tests/: menu-test-input.txt  test_comprehensive.py  test_entity_fix.py  test_modules.py  test_nbsp_removal.py  test_space_preservation.py  validate.py
